# AI-Agent-for-Python-Code-Standardization-and-Documentation

./: .gitignore  README.md  analysis_report.html  generate_report.py  pyproject.toml  requirements.txt
src/ai_code_agent/: __init__.py  analyzer.py  cli.py  optimizer.py  reporter.py  stress_test.py
src/ai_code_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
